@@ -8,7 +8,7 @@
 using namespace dolfin;
 
 //-----------------------------------------------------------------------------
-LinearForm::LinearForm(uint nfunctions) : Form(nfunctions), _test(0)
+LinearForm::LinearForm(uint num_functions) : Form(num_functions), _test(0)
 {
   // Do nothing
 }
@@ -18,18 +18,14 @@ LinearForm::~LinearForm()
   if ( _test ) delete _test;
 }
 //-----------------------------------------------------------------------------
-bool LinearForm::interior(real* block) const
+void LinearForm::eval(real block[], const AffineMap& map) const
 {
-  // The default version returns false, which means that the form does
-  // not contain any integrals over the interior of the domain.
-  return false;
+  // Do nothing
 }
 //-----------------------------------------------------------------------------
-bool LinearForm::boundary(real* block) const
+void LinearForm::eval(real block[], const AffineMap& map, uint boundary) const
 {
-  // The default version returns false, which means that the form does
-  // not contain any integrals over the boundary of the domain.
-  return false;
+  // Do nothing
 }
 //-----------------------------------------------------------------------------
 const FiniteElement& LinearForm::test() const
