@@ -1,3 +1,5 @@
+ - Put computation of map into class AffineMap
+ - Clean up assembly
  - Use dof maps automatically generated by FFC (experimental)
  - Modify interface FiniteElement for new version of FFC
  - Update ODE homotopy test problems
